--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,10 +2,16 @@
 # http://symfony.com/doc/current/security.html
 security:
 
+    encoders:
+        \Abuchyn\AlexBundle\Entity\Admin:
+            algorithm: bcrypt
+
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        our_db_provider:
+            entity:
+                class: AbuchynAlexBundle:Admin
+                property: login
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,11 +20,15 @@ security:
             security: false
 
         main:
+            pattern:    ^/
             anonymous: ~
-            # activate different ways to authenticate
+            form_login:
+                login_path: login
+                check_path: login
+            logout:
+                path:   /logout
+                target: /
 
-            # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
-            #form_login: ~
+    access_control:
+        # require ROLE_ADMIN for /admin*
+        - { path: ^/admin, roles: ROLE_ADMIN }
