--- a/src/Abuchyn/AlexBundle/Resources/config/config.yml
+++ b/src/Abuchyn/AlexBundle/Resources/config/config.yml
@@ -3,4 +3,4 @@ parameters:
     abuchyn_alex.emails.contacts_email: abuchyn@gmail.com
 
     # Default path for upload images
-    images_directory: '%kernel.root_dir%/../web/uploads'
+    images_directory: '%kernel.root_dir%/../web/uploads/title_images'
