searching not ajax

--- a/src/Abuchyn/AlexBundle/Resources/config/errors/error_routing.yml
+++ b/src/Abuchyn/AlexBundle/Resources/config/errors/error_routing.yml
@@ -1,5 +1,5 @@
 not_found:
-    path:     /notFound
+    path:     /not_found
     defaults: { _controller: "AbuchynAlexBundle:Errors:notFound" }
     requirements:
         methods:  GET
