--- a/src/Abuchyn/AlexBundle/Resources/config/routing.yml
+++ b/src/Abuchyn/AlexBundle/Resources/config/routing.yml
@@ -1,30 +1,30 @@
 abuchyn_alex_homepage:
     path:     /
-    defaults: { _controller: AbuchynAlexBundle:Pages:home }
+    defaults: { _controller: "AbuchynAlexBundle:Pages:home" }
     requirements:
         methods:  GET
 
 abuchyn_alex_photo:
     path:     /photo
-    defaults: { _controller: AbuchynAlexBundle:Pages:photo }
+    defaults: { _controller: "AbuchynAlexBundle:Pages:photo" }
     requirements:
         methods:  GET
 
 abuchyn_alex_science:
     path:     /science
-    defaults: { _controller: AbuchynAlexBundle:Pages:science }
+    defaults: { _controller: "AbuchynAlexBundle:Pages:science" }
     requirements:
         methods:  GET
 
 abuchyn_alex_about:
     path:     /about
-    defaults: { _controller: AbuchynAlexBundle:Pages:about }
+    defaults: { _controller: "AbuchynAlexBundle:Pages:about" }
     requirements:
         methods:  GET
 
 abuchyn_alex_contacts:
     path:     /contacts
-    defaults: { _controller: AbuchynAlexBundle:Pages:contacts }
+    defaults: { _controller: "AbuchynAlexBundle:Pages:contacts" }
     requirements:
         methods:  GET|POST
 
@@ -38,7 +38,7 @@ abuchyn_alex_items:
 
 abuchyn_alex_ushow:
     path: /{id}
-    defaults: { _controller: AbuchynAlexBundle:Pages:ushow}
+    defaults: { _controller: "AbuchynAlexBundle:Pages:ushow"}
     requirements:
         methods: GET
         id: \d+
@@ -55,3 +55,9 @@ login:
 
 logout:
     path: /logout
+
+my_search:
+    path: /search
+    defaults: { _controller: "AbuchynAlexBundle:Search:search"}
+    requirements:
+        methods: GET|POST
