--- a/src/Abuchyn/AlexBundle/Resources/config/routing.yml
+++ b/src/Abuchyn/AlexBundle/Resources/config/routing.yml
@@ -43,7 +43,7 @@ abuchyn_alex_ushow:
         methods: GET
         id: \d+
 
-not_found:
+error:
     resource: "@AbuchynAlexBundle/Resources/config/errors/error_routing.yml"
     prefix: /error
 
@@ -61,3 +61,9 @@ my_search:
     defaults: { _controller: "AbuchynAlexBundle:Search:search"}
     requirements:
         methods: GET|POST
+
+not_found:
+    path: /search/not_found
+    defaults: { _controller: "AbuchynAlexBundle:Search:notFound" }
+    requirements:
+        methods:  GET
